--- a/BasicWearOS/app/build.gradle
+++ b/BasicWearOS/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.wear:wear:1.0.0'
     compileOnly 'com.google.android.wearable:wearable:2.5.0'
+    implementation 'com.google.guava:guava:29.0-android'
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 }
